--- a/src/styles/_character.scss
+++ b/src/styles/_character.scss
@@ -9,6 +9,81 @@
     gap: 10px;
 }
 
+.character-container {
+    width: 100%;
+    display: flex;
+    gap: 50px;
+}
+
+.character-info-card {
+    color: unset;
+    text-decoration: none;    
+    border-radius: 15px;
+    font-size: 14px;
+    & > .name {
+        font-size: 18px;
+        font-weight: 500;
+        margin: 0;
+        margin-bottom: 5px;
+    }
+    & > .info {
+        display: flex;
+        justify-content: space-between;
+        & > .info-left {
+            display: flex;
+            gap: 5px;
+            align-items: center;
+        }
+        & > .info-right {
+            font-style: italic;
+            color: $gray;
+        }
+    }
+    & > img {
+        width: 300px;
+        height: 300px;
+        background-color: $gray;
+        object-fit: fill;
+        border-radius: 25px;
+    }
+}
+
+.other-characters-list {
+    & > .title {
+        margin: 0;
+    }
+
+    & > .list {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+
+        & > .mini-character-card {
+            display: flex;
+            gap: 10px;
+            align-items: flex-start;
+            width: 240px;
+            & > img {
+                width: 75px;
+                height: 75px;
+                background-color: $gray;
+                object-fit: fill;
+                border-radius: 15px;
+            }
+            & > .info {
+                display: flex;
+                flex-direction: column;
+                & > h3 {
+                    margin: 0 0 5px 0;
+                }
+                & > p {
+                    margin: 0;
+                }
+            }
+        }
+    }
+}
+
 .character-card {
     color: unset;
     text-decoration: none;    
@@ -42,4 +117,5 @@
         }
     }
 }
+
 
