--- a/src/styles/_character.scss
+++ b/src/styles/_character.scss
@@ -40,8 +40,8 @@
         }
     }
     & > img {
-        width: 300px;
-        height: 300px;
+        width: 500px;
+        height: 500px;
         background-color: $gray;
         object-fit: fill;
         border-radius: 25px;
@@ -54,8 +54,10 @@
     }
 
     & > .list {
-        display: flex;
-        flex-wrap: wrap;
+        display: grid;
+        grid-template-columns: auto auto;
+        gap: 0 10em;
+        margin: 10px 0;
         justify-content: space-between;
 
         & > .mini-character-card {
